# self

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
2021/go-di-framework-fx/: index.html
2021/python-dependency-management-tools/: index.html
2021/relearn-golang/: index.html
2021/uber-cadence/: index.html
2022/go-dynamic-config/: index.html
2022/go-future-implementation/: index.html
2022/go-lock-context/: index.html
about-me/: index.html
docs/: about-me.md  first-of-first.md  index.md  placeholder.md
docs/2021/: go-di-famework-fx.md  go-di-framework-fx.md  python-dependency-management-tools.md  relearn-golang.md  uber-cadence.md
docs/2022/: go-dynamic-config.md  go-future-implementation.md  go-lock-context.md
first-of-first/: index.html
placeholder/: index.html
search/: search_index.json
