[tool.poetry]
name = "self"
version = "0.1.0"
description = ""
authors = ["zedongh <248348907@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
